tests/machine/x/scala/group_items_iteration.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_items_iteration.scala:7: error: not found: value tmp
  val result = (for { r <- tmp } yield r).sortBy(r => r.tag)
                           ^
/workspace/mochi/tests/machine/x/scala/group_items_iteration.scala:12: error: value _2 is not a member of List[group_items_iteration.Data]
      for(x <- g._2) {
                 ^
/workspace/mochi/tests/machine/x/scala/group_items_iteration.scala:15: error: value _1 is not a member of List[group_items_iteration.Data]
      tmp = tmp :+ Auto1(tag = g._1, total = total)
                                 ^
three errors found
